--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: Smirf123 # Your GitHub organization or username, where this repository lives
-repo: Kekmart_Uptime-Monitor # The name of this repository
+repo: Kekmart-Uptime-Monitor # The name of this repository
 
 sites:
   - name: Kmart Bot
