--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,6 +13,8 @@ sites:
     url: https://vrckmart.com
   - name: Discord
     url: https://discord.gg/kmart
+  - name: Kmart Express
+    url: https://404
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
